--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.no-scrollbar::-wedkit-scrollbar{
+    display: none;
+}
+
+.no-scrollbar{
+    -ms-overflow-style:none;
+    scrollbar-width: none;
+}
